Add edit and delete post. Format created_at timestamp.

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,7 +2,7 @@
 
 <ul>
   <% @posts.each do |post| %>
-    <li><%= link_to post.title, post_path(post) %></li>
+    <li><%= link_to post.title, post_path(post) %> | <%= post.created_at.to_s(:long) %></li>
   <% end %>
 </ul>
 
