--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -5,6 +5,7 @@
 <h4><%= @post.body %></h4>
 
 <p><%= link_to "RETURN TO POSTS!!", posts_path %></p>
+<p><%= link_to "EDIT POST!!", edit_post_path(@post) %></p>
 <p><%= link_to "DELETE POST!!", post_path(@post),
                                 :data =>{ :confirm => "REALLY?!",
                                   :method => 'delete' } %></p>
