Add warning text and extra links.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,5 +26,10 @@
 
 <%= yield %>
 
+<div id="about">
+  <hr>
+    <h6>This app will allow you to login and post on a simple, user-unfriendly, blog. You can also comment on blog posts. It allows for self-doubt in that you can edit/delete posts and comments AND because it is so user-unfriendly, you can edit and delete any other user's posts!!!!! By using this app you can gauge how bad of a person you are and when people inevitably complain that you're an asshole, you can delete their hurtful comments and post using their name. Sweet huh? As an added bonus, unless you identify yourself in your post, no one will know it's you! Total anarchy!</h6>
+</div>
+
 </body>
 </html>
