--- a/app/views/comments/edit.html.erb
+++ b/app/views/comments/edit.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form' %>
 
-<p><%= link_to "RETURN TO POST!!", post_path(@post) %></p>
+<!-- <p><%= link_to "RETURN TO POST!!", post_path(@post) %></p> -->
