--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -6,7 +6,7 @@
 <h4><%= @post.body %></h4>
 
 
-<p><%= link_to "Add a comment!", new_post_comment_path(@post) %></p>
+<p><%= link_to "Add a comment!", new_post_comment_path(@post), id: "new_comment", remote: :true %></p>
 <% if @post.comments.any? %>
   <h4>Here are the COMMENTS for this POST!!:</h4>
   <ul>
@@ -14,7 +14,7 @@
     <li>
       <p>Commenter: <%= comment.commenter %> | <%= comment.created_at.to_s(:long) %></p>
         <%= comment.comment %>
-        <%= link_to "Edit", edit_post_comment_path(@post, comment) %> |
+        <%= link_to "Edit", edit_post_comment_path(@post, comment), id: "edit_comment", remote: :true %> |
         <%= link_to "Delete", post_comment_path(@post, comment),
                               :data => {:confirm => "REALLY?",
                                 :method => "delete"} %>
