Add formatting and fix new/edit/delete on posts and comments.

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -6,4 +6,4 @@
   <% end %>
 </ul>
 
-<p><%= link_to 'NEW POST', new_post_path %></p>
+<p><%= link_to 'NEW POST', new_post_path, id: "new_post", remote: :true %></p>
