--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,9 @@
 
 <div id="container">
   <div id="user_nav">
+
+    <%= link_to "Home", posts_path %>
+
     <% if user_signed_in? %>
       Logged in as <strong><%= current_user.email %></strong>.
         <%= link_to 'Edit profile', edit_user_registration_path %> |
